# RiftRay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RiftRay.cfg  RiftRay.icns
cmake_modules/: CopyDLLsToBuild.cmake  HardcodeShaders.cmake  InvokePython.cmake
doc/: Build.md  Doxyfile  ShaderPorting.md
doc/RiftRay-inHTML/: enhancements.html  future_work.html  hmdparameters.html  hmdrendering.html  impl.html  impl_coordinates.html  impl_modelview.html  impl_projection.html  impl_riftrayvars.html  impl_shadertoy.html  implementation.html  index.html  live_demo.html  motivation.html  performance.html  porting_shadertoys.html  prettify.css  prettify.js  related_work.html  shadertoy_livedemo.html  slides.html  style.css  survey.html  texture_channels.html  thanks_utilities.html  title.html  whatwontwork.html  whatworks.html
hardcoded_shaders/: basic.frag  basic.vert  basicplane.frag  basicplane.vert  basictex.frag  basictex.vert  fontrender.frag  fontrender.vert  hydrabase.frag  hydrabase.vert  presentfbo.frag  presentfbo.vert  presentmesh.frag  presentmesh.vert  raymarch.frag  raymarch.vert  rwwtt.vert  rwwtt_footer.glsl  rwwtt_header.glsl  shaderpane.frag  shaderpane.vert  ucolor.frag  ucolor.vert
shaders/: abstract_corridor.glsl  ancient_temple.glsl  angels.glsl  another_kaliset_mod.glsl  apollonian.glsl  avatar.frag  avatar.vert  bacterium.glsl  basic.frag  basicplane.frag  basictex.frag  basictex.vert  beneath_the_sea.glsl  between_worlds.glsl  bridge.glsl  brighton.glsl  canyon.glsl  catacombs.glsl  cave_pillars.glsl  cavestructure.glsl  city_maker.glsl  crazy_mandelbulb.glsl  deal.glsl  desert_morning.glsl  efficient_mandelbulb.glsl  emerging.glsl  entangled_vines.glsl  first_mapping_test.glsl  fractal_cartoon.glsl  fractals_mandelbulb.glsl  frozen_wasteland.glsl  generators.glsl  hg_sdf.glsl  kaleidoscopy.glsl  kali-traps.glsl  la_calanque.glsl  lighting_room.glsl  loxodrome.glsl  mandelbulb.glsl  mandelbulb_.glsl  (+33 more)
shaders/more/: alias_vortex.glsl  attic.glsl  chains_and_gears.glsl  confection.glsl  cook-torrance.glsl  crazy_springs.glsl  crystal_gap.glsl  cubes_and_spheres.glsl  depth.glsl  diy_spaceman_cave.glsl  dubstep.glsl  elevated.glsl  fractal_sphere.glsl  galaxy_3d.glsl  glass_polyhedron.glsl  glassfield.glsl  hypercomplex.glsl  ice_cave.glsl  infinite_city.glsl  infinite_roads.glsl  inversion.glsl  kaleidoscopic.glsl  kali3d.glsl  kali_traps_c.glsl  loxodrome.glsl  lumspheres.glsl  mandelklein.glsl  menger_journey.glsl  mirror_room.glsl  neg_color.glsl  other_world.glsl  piano.glsl  plasma_globe.glsl  quaternion.glsl  rainbow.glsl  random_spheres.glsl  raymarching_primitives.glsl  relentless.glsl  rendezvous.glsl  ribbon.glsl  (+13 more)
shaders/shadertoy/: aa_raymarch.glsl  aa_shadows.glsl  aa_z_kifs.glsl  aa_z_menger.glsl  angels.glsl  brighton.glsl  floating_mtns.glsl  generators.glsl  grid_cylinders.glsl  loxodrome.glsl  lumspheres.glsl  rainbow.glsl  relentless.glsl  rrrola.glsl  space_rings.glsl  truchet.glsl  truchet_lp.glsl  tunnel.glsl  woods.glsl
src/: glfw_main.cpp  glfw_sdk06_main.cpp  main_glfw_ovrsdk08.cpp  main_glfw_ovrsdk13.cpp  main_include.cpp  sdl_main.cpp  version.h
src/AppSkeleton/: AppSkeleton.cpp  AppSkeleton.h  OVRSDK05AppSkeleton.cpp  OVRSDK05AppSkeleton.h  OVRSDK06AppSkeleton.cpp  OVRSDK06AppSkeleton.h  RenderingMode.h  RiftAppSkeleton.cpp  RiftAppSkeleton.h
src/FlyingMouse/: FlyingMouse.cpp  FlyingMouse.h  VirtualTrackball.cpp  VirtualTrackball.h
src/OVRkill/: Draw_Helpers.cpp  Draw_Helpers.h  OVR_Shaders.h  OVRkill.cpp  OVRkill.h
src/Scene/: AntPane.cpp  AntPane.h  AntQuad.cpp  AntQuad.h  CamPane.cpp  CamPane.h  DashboardScene.cpp  DashboardScene.h  FloorScene.cpp  FloorScene.h  HudQuad.cpp  HudQuad.h  HydraScene.cpp  HydraScene.h  IScene.h  MousingQuad.cpp  MousingQuad.h  OVRScene.cpp  OVRScene.h  Pane.cpp  Pane.h  PaneScene.cpp  PaneScene.h  PngPane.cpp  PngPane.h  RaymarchShaderScene.cpp  RaymarchShaderScene.h  Scene.cpp  Scene.h  ShaderGalleryScene.cpp  ShaderGalleryScene.h  ShaderPane.cpp  ShaderPane.h  ShaderToy.cpp  ShaderToy.h  ShaderToyPane.cpp  ShaderToyPane.h  ShaderToyScene.cpp  ShaderToyScene.h  VirtualTrackball.cpp  (+1 more)
src/Util/: AppDirectories.h  DirectoryFunctions.cpp  DirectoryFunctions.h  FPSTimer.cpp  FPSTimer.h  Logger.cpp  Logger.h  StringFunctions.cpp  StringFunctions.h  Timer.cpp  Timer.h
src/Util/GL/: BMFont.cpp  BMFont.h  FBO.cpp  FBO.h  GLUtils.h  MatrixFunctions.cpp  MatrixFunctions.h  ShaderFunctions.cpp  ShaderFunctions.h  ShaderToy.cpp  ShaderToy.h  ShaderToyFunctions.cpp  ShaderToyFunctions.h  ShaderToyGlobalState.h  ShaderWithVariables.cpp  ShaderWithVariables.h  TextureFunctions.cpp  TextureFunctions.h
src/Util/win/: dirent.h
src/appskeleton/: AntOculusAppSkeleton.cpp  AntOculusAppSkeleton.h  AppSkeleton.cpp  AppSkeleton.h  OculusAppSkeleton.cpp  OculusAppSkeleton.h  Scene.cpp  Scene.h  VirtualTrackball.cpp  VirtualTrackball.h
src/main/: simple_glfw_main.cpp
src/utils/: FPSTimer.cpp  FPSTimer.h  Logger.cpp  Logger.h  MatrixMath.cpp  MatrixMath.h  Timer.cpp  Timer.h  string_utils.cpp  string_utils.h
src/utils/GL/: FBO.cpp  FBO.h  GLUtils.cpp  ShaderFunctions.cpp  ShaderFunctions.h  TextureFunctions.cpp  TextureFunctions.h
src/vectormath/: VectorMath.cpp  VectorMath.h  vector_make_helpers.cpp  vector_make_helpers.h  vectortypes.h
textures/: arial.fnt
tools/: assembleRelease.py  copyDLLs.py  hardcode_shaders.py
